hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello-namespace
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-container
          image: arthuracrs/hello:latest
          ports:
            - containerPort: 8080
