hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-namespace
spec:
  type: NodePort
  selector: 
    app: hello-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30000
