hello-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-namespace
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-namespace
spec:
  # type: NodePort
  selector: 
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
      # nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello-namespace
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-container
          image: arthuracrs/hello:latest
          ports:
            - containerPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello-namespace
spec:
  rules:
  - host: "*"
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              name: http
